fix logo alignment

--- a/src/styles/demo.css
+++ b/src/styles/demo.css
@@ -180,6 +180,7 @@ body .dg .dg.main.a {
   font-family: Helvetica, Arial, sans-serif;
   text-decoration: none;
   line-height: 13px;
+  margin: 0 -10px 0 0;
 }
 
 .matter-logo {
